--- a/app/views/layouts/mailers/user_mailer_layout.html.haml
+++ b/app/views/layouts/mailers/user_mailer_layout.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "width=device-width", name: "viewport"}/
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title= @page_title rescue "GradeCraft Files Exported"
+    %title= @page_title rescue "GradeCraft User Notification"
     = render "layouts/mailers/stylesheet"
 
   %body{:bgcolor => "#f6f6f6"}
