--- a/app/views/notification_mailer/lti_error.text.haml
+++ b/app/views/notification_mailer/lti_error.text.haml
@@ -1,13 +1,13 @@
-Hey-o GradeCraft Admin!!
+Hey-o GradeCraft Admin!
 
 I had a problem authenticating this user/course via LTI:
 
-**User Info**
+** User Info **
 Name: #{ @user_data[:name] }
 Email: #{ @user_data[:email] }
 LTI UID: #{ @user_data[:lti_uid] }
 
-**Course Info**
+** Course Info **
 Name: #{ @course_data[:name] }
 LTI UID: #{ @course_data[:lti_uid] }
 
