--- a/app/views/layouts/mailers/notification_layout.html.haml
+++ b/app/views/layouts/mailers/notification_layout.html.haml
@@ -4,8 +4,7 @@
     %meta{:content => "width=device-width", name: "viewport"}/
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title= @page_title rescue "GradeCraft Notification"
-    :css
-      = GradeCraft::Application.assets["mailer.css"].to_s.html_safe
+    = render "layouts/mailers/stylesheet"
 
   %body{:bgcolor => "#f6f6f6"}
     / body
@@ -16,36 +15,11 @@
           / content
           .content
             %table
+              %tr= render "layouts/mailers/logo"
               %tr
                 %td
                   = yield
-              %tr
-                %td
-                  %p{:align => "center"}
-                    %a{:alt => "GradeCraft on Facebook", :href => "http://facebook.com/gradecraft"}
-                      %img{:src => "https://gradecraft.com/images/facebook500.png", :width => "40"}/
-                    %a{:alt => "GradeCraft on Twitter", :href => "http://twitter.com/gradecraft"}
-                      %img{:src => "https://gradecraft.com/images/twitter.png", :width => "40"}/
-                    %a{:alt => "GradeCraft on YouTube", :href => "http://www.youtube.com/playlist?list=PL8pE6w-B6iSUjSjK5cR0yaC1xxvQmLe5m"}
-                      %img{:src => "https://gradecraft.com/images/youtube.png", :width => "40"}/
-                  %p{:style => "text-transform:uppercase; font-size: 10px; text-align: center;"}
-                    ©2012-15 Regents of The University of Michigan
-                  %p{:align => "center"}
-                    %strong
-                      %a{:href => "mailto:help@gradecraft.com", :style => "color:#00BD39; text-decoration:none"} help@gradecraft.com
-          / /content
-        %td
-    / /body
+              = render "layouts/mailers/social_media"
+
     / footer
-    %table.footer-wrap
-      %tr
-        %td
-        %td.container
-          / content
-          .content
-            %table
-              %tr{:align => "center"}
-                %td{:align => "center"}
-          / /content
-        %td
-    / /footer
+    = render "layouts/mailers/footer"
