--- a/app/views/notification_mailer/earned_badge_awarded.html.haml
+++ b/app/views/notification_mailer/earned_badge_awarded.html.haml
@@ -1,6 +1,3 @@
-%p{:align => "center"}
-  %a{:href => "http://gradecraft.com", :target => "_blank"}
-    %img{:alt => "", :border => "0", :src => "https://www.gradecraft.com/images/gradecraft_logo.png", :width => "207"}/
 %h2{:align => "center"}
   %strong Congratulations #{ @student.first_name }!
 %p{:align => "center"}
@@ -9,8 +6,8 @@
   You've earned the
   %strong= @earned_badge.badge.name
   #{ @course.badge_term }.
-%p{:align => "center"}
-  - if @earned_badge.feedback.present?
+- if @earned_badge.feedback.present?
+  %p{:align => "center"}
     %br/
     %em Your instructor said:
     %p
@@ -19,7 +16,8 @@
 %p
 %hr/
 %p{:align => "center"}
-  Check out what other #{ @course.badge_term.pluralize.downcase } you can earn in #{ @course.name }
+  Check out what other #{ @course.badge_term.pluralize.downcase } you can
+  earn in #{ @course.name }
   = succeed "." do
     %a{:href => "https://www.gradecraft.com/my_badges"} here
 %hr/
