--- a/app/views/user_mailer/welcome_email.html.haml
+++ b/app/views/user_mailer/welcome_email.html.haml
@@ -1,92 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta name="viewport" content="width=device-width" />
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Welcome Email Template</title>
-<style type="text/css">
-= GradeCraft::Application.assets["mailer.css"].to_s.html_safe
-</style>
-</head>
-
-<body bgcolor="#f6f6f6">
-
-<!-- body -->
-<table class="body-wrap">
-<tr>
-<td></td>
-<td class="container" bgcolor="#FFFFFF">
-
-<!-- content -->
-<div class="content">
-<table>
-<tr>
-<td>
-<p align="center">
-<a href= "http://gradecraft.com" target="_blank"><img src="https://www.gradecraft.com/images/gradecraft_logo.png" width="207" border="0" alt="" /></a>
-</p>
-<h2 align="center"><strong>Welcome to GradeCraft!</strong></h2>
-
-<h3 align="center">Your email #{@user.email} is registered with a new GradeCraft account.</h3>
-<p>
-<hr />
-</p>
+%h2{:align => "center"}
+  %strong Welcome to GradeCraft!
+%h3{:align => "center"} Your email #{@user.email} is registered with a new GradeCraft account.
+%p
+%hr
 %p{ align: "center" }
   You can visit the
-  =link_to "dashboard", dashboard_url
+  = link_to "dashboard", dashboard_url
   to get started.
-
-<hr />
-</td>
-</tr>
-<tr>
-<td>
-<p align="center">
-<a href="http://facebook.com/gradecraft" alt="GradeCraft on Facebook"><img src="https://gradecraft.com/images/facebook500.png" width="40"/></a>
-
-<a href="http://twitter.com/gradecraft" alt="GradeCraft on Twitter"><img src="https://gradecraft.com/images/twitter.png" width="40"/></a>
-
-<a href="http://www.youtube.com/playlist?list=PL8pE6w-B6iSUjSjK5cR0yaC1xxvQmLe5m" alt="GradeCraft on YouTube"><img src="https://gradecraft.com/images/youtube.png" width="40"/></a>
-
-<p style="text-transform:uppercase; font-size: 10px; text-align: center;">
-&copy;2012-15 Regents of The University of Michigan
-</p>
-<p align="center">
-<strong><a href= "mailto:help@gradecraft.com" style="color:#00BD39; text-decoration:none">help@gradecraft.com</a></strong>
-</p>
-</td></tr>
-</table>
-</div>
-<!-- /content -->
-
-</td>
-<td></td>
-</tr>
-</table>
-<!-- /body -->
-
-<!-- footer -->
-<table class="footer-wrap">
-<tr>
-<td></td>
-<td class="container">
-
-<!-- content -->
-<div class="content">
-<table>
-<tr align="center">
-<td align="center">
-</td>
-</tr>
-</table>
-</div>
-<!-- /content -->
-
-</td>
-<td></td>
-</tr>
-</table>
-<!-- /footer -->
-
-</body>
-</html>
