--- a/app/views/user_mailer/reset_password_email.text.haml
+++ b/app/views/user_mailer/reset_password_email.text.haml
@@ -1,8 +1,7 @@
 Hello, #{@user.first_name}
-===============================================
 
 You have requested to reset your password.
 
-To choose a new password, just follow this link: #{edit_password_url(@user.reset_password_token).html_safe}
+To choose a new password, just follow this link: #{edit_password_path(@user.reset_password_token).html_safe}
 
 Have a great day!
