--- a/app/views/info/resubmissions.html.haml
+++ b/app/views/info/resubmissions.html.haml
@@ -37,28 +37,29 @@
         - resubmissions.each do |re|
           %tr
             - if re.assignment.is_individual?
-              %td= link_to re.student.try(:first_name), student_path(re.student)
-              %td= link_to re.student.try(:last_name), student_path(re.student)
+              %td= link_to re.student.first_name, student_path(re.student)
+              %td= link_to re.student.last_name, student_path(re.student)
               - if current_course.has_teams?
                 %td
-                  - if re.student.present? && re.student.team_for_course(current_course).present?
-                    = link_to re.student.team_for_course(current_course).try(:name), re.student.team_for_course(current_course)
+                  - team = re.student.team_for_course(current_course)
+                  - if team.present?
+                    = link_to team.name, team
               %td= points re.student.grade_for_assignment(re.assignment).score
-              %td= re.student.grade_for_assignment(re.assignment).updated_at
-              %td= re.updated_at
+              %td= re.student.grade_for_assignment(re.assignment).graded_at
+              %td= re.submitted_at
               %td
                 .right
                   %ul.button-bar
                     %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(re.assignment, id: re.id), class: "button"
                     %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(assignment_id:assignment.id, student_id: re.student.try(:id)), class: "button"
             - elsif re.assignment.has_groups?
-              %td= link_to re.group.try(:name), group_path(id: re.group.id)
+              %td= link_to re.group.name, group_path(id: re.group.id)
               %td
               %td
-              %td= re.updated_at
+              %td= re.submitted_at
               %td
                 .right
                   %ul.button-bar
-                    %li= link_to re.group.try(:name), group_path(re.group)
+                    %li= link_to re.group.name, group_path(re.group)
                     %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(re.assignment.id, id: re.id), class: "button"
               %td= link_to glyph(:check) + "Grade", group_grade_assignment_path(re.assignment, group_id: re.group), class: "button"
