Change the display of when a submission was submitted to use submitted at in the grading status view

--- a/app/views/info/_ungraded_submissions_table.haml
+++ b/app/views/info/_ungraded_submissions_table.haml
@@ -33,7 +33,7 @@
                 = link_to team.name, team
           - elsif assignment.has_groups?
             %td= link_to group.try(:name), group_path(group)
-          %td= submission.updated_at
+          %td= submission.submitted_at
           %td
             .right
               %ul.button-bar
