--- a/app/views/submissions/_instructor_show.haml
+++ b/app/views/submissions/_instructor_show.haml
@@ -2,7 +2,7 @@
 
   %p
     %span.smallcaps Submitted:
-    = presenter.student.submission_for_assignment(presenter.assignment).created_at
+    = presenter.student.submission_for_assignment(presenter.assignment).submitted_at
 
     // Late alert if submitted after due date
     - if presenter.student.submission_for_assignment(presenter.assignment).late?
@@ -10,12 +10,6 @@
 
     - if presenter.student.submission_for_assignment(presenter.assignment).resubmitted?
       %span.label.alert Resubmission!
-
-    // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
-  - if presenter.student.submission_for_assignment(presenter.assignment).updated_at != presenter.student.submission_for_assignment(presenter.assignment).created_at
-    %p
-      %span.smallcaps Updated:
-      %span= presenter.student.submission_for_assignment(presenter.assignment).updated_at
 
   // Displaying the link to the submission if there is one
   - if presenter.student.submission_for_assignment(presenter.assignment).link?
@@ -41,16 +35,14 @@
   // Displaying when the assignment was submitted
   %p
     %span.smallcaps Submitted:
-    = presenter.group.submission_for_assignment(presenter.assignment).created_at
+    = presenter.group.submission_for_assignment(presenter.assignment).submitted_at
 
     // Late alert if submitted after due date
     - if presenter.group.submission_for_assignment(presenter.assignment).late?
       %span.label.alert Late!
-    // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
-  - if presenter.group.submission_for_assignment(presenter.assignment).updated_at != presenter.group.submission_for_assignment(presenter.assignment).created_at
-    %p
-      %span.smallcaps Updated:
-      %span= presenter.group.submission_for_assignment(presenter.assignment).updated_at
+
+    - if presenter.student.submission_for_assignment(presenter.assignment).resubmitted?
+      %span.label.alert Resubmission!
 
   // Displaying the link to the submission if there is one
   - if presenter.group.submission_for_assignment(presenter.assignment).link?
