--- a/app/views/submissions/_student_show.haml
+++ b/app/views/submissions/_student_show.haml
@@ -8,7 +8,7 @@
 
   %p
     %span.smallcaps Submitted:
-    = presenter.submission_for_assignment(current_student).created_at
+    = presenter.submission_for_assignment(current_student).submitted_at
 
     // Late alert if submitted after due date
     - if presenter.submission_for_assignment(current_student).late?
@@ -16,12 +16,6 @@
 
     - if presenter.submission_for_assignment(current_student).resubmitted?
       %span.label.alert Resubmission!
-
-    // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
-  - if presenter.submission_updated?(current_student)
-    %p
-      %span.smallcaps Updated:
-      %span= presenter.submission_for_assignment(current_student).updated_at
 
   // Displaying the link to the submission if there is one
   - if presenter.submission_for_assignment(current_student).link?
@@ -56,11 +50,9 @@
     // Late alert if submitted after due date
     - if presenter.group_submission_for(current_student).late?
       %span.label.alert Late!
-    // Checking to see if the submission was updated - if the update date is different from the creation date, displaying it
-  - if presenter.group_submission_updated?(current_student)
-    %p
-      %span.smallcaps Updated:
-      %span= presenter.group_submission_for(current_student).updated_at
+
+    - if presenter.submission_for_assignment(current_student).resubmitted?
+      %span.label.alert Resubmission!
 
   // Displaying the link to the submission if there is one
   - if presenter.group_submission_for(current_student).link?
