--- a/app/views/assignments/individual/_table_head.html.haml
+++ b/app/views/assignments/individual/_table_head.html.haml
@@ -22,6 +22,7 @@
 
   - if presenter.assignment.accepts_submissions?
     %th{scope: "col"} Submitted
+    %th{scope: "col"} Resubmitted?
 
   %th{:style => "min-width: 180px"}
 
