Adding button switch

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -38,6 +38,9 @@
     &:hover
       background-color: $color-blue-3
 
+  &.hidden
+    display: none !important
+
 .submit-buttons
   margin-top: 1rem
   position: relative
