--- a/app/views/students/_student_profile_tabs.haml
+++ b/app/views/students/_student_profile_tabs.haml
@@ -4,7 +4,7 @@
       = link_to_unless_current "#{term_for :assignments}", student_path(current_student)
     - if current_course.grade_scheme_elements.present?
       %li{class: ("active" if current_page?(student_course_progress_path(current_student))) }
-        = link_to_unless_current "Course Progress", student_course_progress_path(current_student)
+        = link_to_unless_current "Grading Scheme", student_course_progress_path(current_student)
     %li{class: ("active" if current_page?(student_predictor_path(current_student))) }
       = link_to_unless_current "Grade Predictor", student_predictor_path(current_student)
     - if current_course.has_badges?
@@ -21,7 +21,7 @@
       = link_to_unless_current "#{term_for :assignments}", syllabus_path
     - if current_course.grade_scheme_elements.present?
       %li{class: ("active" if current_page?(course_progress_path)) }
-        = link_to_unless_current "Course Progress", course_progress_path
+        = link_to_unless_current "Grading Scheme", course_progress_path
     %li{class: ("active" if current_page?(predictor_path)) }
       = link_to_unless_current "Grade Predictor", predictor_path
     - if current_course.has_badges?
