--- a/app/views/assignments/individual/_table_body.html.haml
+++ b/app/views/assignments/individual/_table_body.html.haml
@@ -61,12 +61,15 @@
 
           - if grade.instructor_modified?
             %li= link_to glyph(:eye) + "See Grade", assignment_grade_path(presenter.assignment, student_id: student.id), class: "button"
-            %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(presenter.assignment, student_id: student.id), class: "button"
+            - if presenter.assignment.accepts_submissions? && presenter.submission_resubmitted?(submissions_for_assignment)
+              %li= link_to glyph(:edit) + "Re-grade", edit_assignment_grade_path(presenter.assignment, student_id: student.id), class: "button danger"
+            - else
+              %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(presenter.assignment, student_id: student.id), class: "button"
             %li= link_to glyph(:trash) + "Delete Grade", remove_grades_assignment_path(id: grade.id), class: "button", data: { confirm: "Are you sure?" }, :method => :post
           - else
             - if presenter.assignment.is_unlockable? && !presenter.assignment.is_unlocked_for_student?(student)
               %li= link_to glyph("unlock-alt") + "Unlock", manually_unlock_unlock_state_path(student_id: student.id, assignment_id: presenter.assignment.id), :method => :post, class: "button"
-            %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(presenter.assignment, student_id: student.id), class: "button"
+            %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(presenter.assignment, student_id: student.id), class: "button danger"
 
     - if presenter.assignment.release_necessary?
       %td
