--- a/app/views/assignments/individual/_table_body.html.haml
+++ b/app/views/assignments/individual/_table_body.html.haml
@@ -69,7 +69,8 @@
           - else
             - if presenter.assignment.is_unlockable? && !presenter.assignment.is_unlocked_for_student?(student)
               %li= link_to glyph("unlock-alt") + "Unlock", manually_unlock_unlock_state_path(student_id: student.id, assignment_id: presenter.assignment.id), :method => :post, class: "button"
-            %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(presenter.assignment, student_id: student.id), class: "button danger"
+            - has_submission = presenter.assignment.accepts_submissions? && !submissions_for_assignment.empty?
+            %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(presenter.assignment, student_id: student.id), class: "button #{has_submission ? "danger" : ""}"
 
     - if presenter.assignment.release_necessary?
       %td
