Highlight grade exclusion on results page

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -21,6 +21,7 @@
   &:hover
     background-color: darken($color-blue-3, 10%) !important
     color: $color-white
+    text-decoration: none
 
   &:active
     background-color: $color-green-2
