--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -5,7 +5,7 @@
   padding: 1rem
 
   a
-    color: $color-blue-3
+    color: $color-blue-3 !important
 
 .tabs-content
   border: none
@@ -66,3 +66,6 @@ form .tabs-content .content
       background: $color-blue-3 !important
       a
         color: $color-white !important
+
+#tab4 a
+  color: $color-yellow-1
