--- a/app/views/grades/components/_excluded.haml
+++ b/app/views/grades/components/_excluded.haml
@@ -1,5 +1,5 @@
-.italic
+.alert-box.error.bold
   This grade was excluded from your total score on
   = "#{ grade.excluded_at } by #{ grade.excluded_by.name }."
   If you have any questions, please
-  = mail_to grade.excluded_by.email, "email them"
+  = mail_to grade.excluded_by.email, "email them."
