Eighty character limits

--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -9,7 +9,8 @@
   width: 80%
   max-width: 100px
 
-/* used on the badge show page for both instructors and students, and grade standard edit form */
+/* used on the badge show page for both instructors and students, and grade
+/* standard edit form */
 .badge-card
   position: relative
   min-height: 8%
