--- a/app/views/assignment_types/all_grades.html.haml
+++ b/app/views/assignment_types/all_grades.html.haml
@@ -52,17 +52,20 @@
 
                   - if grade && grade.score == assignment.point_total
                     - i += 1
-                    // Displaying td's colored green if the student earned all points possible on the assignment
+                    // Displaying td's colored green if the student earned all
+                    // points possible on the assignment
                     %td
                       %i.fa.fa-heart.complete
                         = i
                   - elsif grade && grade.score == 0
-                    // Displaying td's colored red if the student earned no points on the assignment (but HAS a grade)
+                    // Displaying td's colored red if the student earned no
+                    // points on the assignment (but HAS a grade)
                     - i = 0
                     %td
                       %i.fa.fa-times.absent
                   - elsif grade && grade.score < assignment.point_total
-                    // Displaying td's colored yellow if the student earned some points on the assignment
+                    // Displaying td's colored yellow if the student earned
+                    // some points on the assignment
                     - i = 0
                     %td
                       %i.fa.fa-heart-o.partial
