--- a/app/views/grades/_individual_show.html.haml
+++ b/app/views/grades/_individual_show.html.haml
@@ -1,18 +1,13 @@
 - if presenter.grades_available_for?(current_student) || current_user_is_staff?
-  - if current_user_is_staff?
-    %h4.sr-only #{current_student.first_name}'s Grade
-    %p.bold
-      #{current_student.first_name}'s Grade
-      %span
-        %a{:href => "#{edit_assignment_grade_path(presenter.assignment)}?student_id=#{current_student.id}", class: "button"  }
-          Edit
-          %span.sr-only #{current_student.first_name}'s Grade
-
   - grade = presenter.grade_for(current_student)
+
+  = render "grades/components/title", grade: grade if current_user_is_staff?
 
   = render "grades/components/excluded", grade: grade if grade.excluded_from_course_score?
 
   = render "grades/components/score", grade: grade
+
+  = render "grades/components/status", grade: grade if current_user_is_staff?
 
   = render "grades/components/points_adjustment", grade: grade if grade.adjustment_points != 0
 
@@ -20,8 +15,8 @@
 
   = render "grades/components/feedback", grade: grade if grade.feedback.present?
 
-  .rubric-container= render "grades/components/criterion_grade_results", locals: { presenter: presenter } if presenter.rubric_designed?
+  = render "grades/components/badges", grade: grade if grade.earned_badges.present?
 
-  .right
-    %br
-    = render partial: "grades/components/request_feedback", locals: { grade: grade, assignment: presenter.assignment }
+  .rubric-container= render "grades/components/criterion_grade_results", presenter: presenter if presenter.rubric_designed?
+
+  = render partial: "grades/components/request_feedback", locals: { grade: grade, assignment: presenter.assignment } if current_user_is_student?
