--- a/app/views/grades/_group_show.html.haml
+++ b/app/views/grades/_group_show.html.haml
@@ -1,10 +1,16 @@
 - if presenter.grades_available_for?(current_student) || current_user_is_staff?
 
-  = render "grades/components/title", grade: grade if current_user_is_staff?
+  - grade = presenter.grade_for(current_student)
 
-  = render "grades/components/students_in_group", grade: grade
+  = render "grades/components/edit_button", grade: grade if current_user_is_staff?
+
+  = render "grades/components/excluded", grade: grade if grade.excluded_from_course_score?
+
+  = render "grades/components/students_in_group", grade: grade, presenter: presenter
 
   = render "grades/components/score", grade: grade
+
+  = render "grades/components/status", grade: grade if current_user_is_staff?
 
   = render "grades/components/points_adjustment", grade: grade if grade.adjustment_points != 0
 
