--- a/app/views/grades/_individual_show.html.haml
+++ b/app/views/grades/_individual_show.html.haml
@@ -1,7 +1,8 @@
 - if presenter.grades_available_for?(current_student) || current_user_is_staff?
+
   - grade = presenter.grade_for(current_student)
 
-  = render "grades/components/title", grade: grade if current_user_is_staff?
+  = render "grades/components/edit_button", grade: grade if current_user_is_staff?
 
   = render "grades/components/excluded", grade: grade if grade.excluded_from_course_score?
 
