--- a/app/views/grades/show.html.haml
+++ b/app/views/grades/show.html.haml
@@ -4,7 +4,4 @@
 
 .pageContent
   = render "layouts/alerts"
-  - if @assignment.is_individual?
-    = render partial: "individual_show", locals: { presenter: presenter }
-  - else
-    = render partial: "group_show", locals: { presenter: presenter }
+  = render "grade_content", presenter: presenter
