--- a/app/views/grades/_grade_content.haml
+++ b/app/views/grades/_grade_content.haml
@@ -6,6 +6,8 @@
 
   = render "grades/components/excluded", grade: grade if grade.excluded_from_course_score?
 
+  = render "grades/components/students_in_group", grade: grade, presenter: presenter if grade.assignment.has_groups?
+
   = render "grades/components/score", grade: grade
 
   = render "grades/components/status", grade: grade if current_user_is_staff?
