reduced outline button border to 1px and added hover state

--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -108,10 +108,13 @@
 a.outline-button
   position: relative
   top: 1rem
-  border: 2px solid $color-blue-3
+  border: 1px solid $color-blue-3
   color: $color-blue-3
   border-radius: .5rem
   padding: .5rem
+  &:hover
+    background-color: $color-blue-3
+    color: white
 
 @media (max-width: $media-medium-max)
   .homepage
