--- a/app/views/submissions/_instructor_show.haml
+++ b/app/views/submissions/_instructor_show.haml
@@ -41,7 +41,7 @@
     - if presenter.group.submission_for_assignment(presenter.assignment).late?
       %span.label.alert Late!
 
-    - if presenter.student.submission_for_assignment(presenter.assignment).resubmitted?
+    - if presenter.group.submission_for_assignment(presenter.assignment).resubmitted?
       %span.label.alert Resubmitted!
 
   // Displaying the link to the submission if there is one
