changed button text on student table to read 'my grade' rather than 'my results'

--- a/app/views/students/syllabus/_student_table.haml
+++ b/app/views/students/syllabus/_student_table.haml
@@ -64,7 +64,7 @@
 
             / Results /
             - if grade_visible_for_assignment
-              %li= link_to glyph(:eye) + "See Results", assignment_path(assignment, anchor: "tab4"), class: "button"
+              %li= link_to glyph(:eye) + "See Grade", assignment_path(assignment, anchor: "tab4"), class: "button"
 
             / Groups /
             - if assignment.has_groups?
