changed 'my results' to 'my grade' on tabs in student view

--- a/app/views/assignments/_show_student.haml
+++ b/app/views/assignments/_show_student.haml
@@ -20,7 +20,7 @@
 
       - if presenter.grades_available_for?(current_student)
         %li
-          %a{ :href => "#tab4"} My Results
+          %a{ :href => "#tab4"} My Grade
         - if !presenter.hide_analytics?
           %li
             %a{ :href => "#tab5"} Class Analytics
