changed global link color to color-blue-2

--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -54,6 +54,10 @@ body
 
 a
   text-decoration: none
+  color: $color-blue-3
+  
+.assignment_type a, table a
+  text-decoration: none
   color: $color-blue-2
 
 a:hover
