Only show date if date present

--- a/app/views/assignments/individual/_table_body.html.haml
+++ b/app/views/assignments/individual/_table_body.html.haml
@@ -49,7 +49,7 @@
         - unless submissions_for_assignment.empty?
           = presenter.submission_submitted_date_for(submissions_for_assignment)
       %td{:style => "display: none"}
-        = presenter.submission_submitted_date_for(submissions_for_assignment).to_formatted_s(:db)
+        = presenter.submission_submitted_date_for(submissions_for_assignment).to_formatted_s(:db) if presenter.submission_submitted_date_for(submissions_for_assignment).present?
 
     %td
       .right
