changed hover link color for all sidebar items to -green-2

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -29,6 +29,9 @@
 
   a
     color: $color-blue-4
+    font-family: 'Light-Weight'
+    &:hover
+      color: $color-green-2
 
   hr
     margin: .25rem 0
@@ -58,11 +61,6 @@
       margin-bottom: 0
     .button:hover
       background-color: $color-blue-4
-
-    .assignment-name
-      font-family: 'Light-Weight'
-      a:hover
-        color: $color-green-2
 
   ul.block-grid
     margin: 0.5rem auto !important
