--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -4,21 +4,18 @@
 .page
   .hero-section
     margin: 0
-    background:rgba(0,0,0,.1)
+    background:rgba(46,112,190,.3)
     background-position: top center
     background-repeat: no-repeat
     height: 100px
     padding: 40px 0 0
 
     h1
-      background-color: $color-white
-      color: $color-black
+      color: $color-white
       text-align: center
-      font-size: 2.2rem
-      font-weight: lighter
+      font-size: 2.5rem
       width: 50%
       margin: 0 auto
-      border-radius: 5rem
 
   .main-section
     background-color: $color-white
