removed underline of link from .outline-button on hover

--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -106,15 +106,16 @@
         font-size: .8rem
 
 a.outline-button
-  position: relative
-  top: 1rem
+  border-radius: .5rem
   border: 1px solid $color-blue-3
   color: $color-blue-3
-  border-radius: .5rem
   padding: .5rem
+  position: relative
+  top: 1rem
   &:hover
     background-color: $color-blue-3
     color: white
+    text-decoration: none
 
 @media (max-width: $media-medium-max)
   .homepage
