added transform property to vertically center text on features page

--- a/app/assets/stylesheets/_features.sass
+++ b/app/assets/stylesheets/_features.sass
@@ -76,6 +76,8 @@
     .text
       line-height: 1.75rem
       font-size: 1.1rem
+      top: 50%
+      transform: translateY(-50%)
 
     h2
       font-size: 1.75rem
