--- a/app/views/assignments/_show_student.haml
+++ b/app/views/assignments/_show_student.haml
@@ -33,7 +33,9 @@
           = render partial: "assignments/rubric_preview", locals: { presenter: presenter }
       - if presenter.has_submission_for?(current_student)
         #tab3
-          = render partial: "submissions/student_show", locals: { presenter: presenter }
+          = render partial: "submissions/submission_content",
+              locals: { presenter: ShowSubmissionPresenter.new(id: presenter.submission_for_assignment(current_student).id,
+                assignment_id: presenter.assignment.id, course: current_course) }
         #history
           = history_timeline presenter.submission_grade_history(current_student)
       - if presenter.grades_available_for?(current_student)
