added CDN Open Sans font and deleted font files and changed all instances of Light-Weight and Standard-Weight to respective number weights

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -29,7 +29,7 @@
 
   a
     color: $color-blue-4
-    font-family: 'Light-Weight'
+    font-weight: 300
     &:hover
       color: $color-green-2
 
@@ -45,7 +45,7 @@
   .form_label
     color: $color-green-2
     font-style: normal
-    font-family: 'Light-Weight'
+    font-weight: 300
 
   .todo li
     list-style-type: none
