--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -6,12 +6,12 @@ h1, h2, h3, h4, h5
   margin: 0
   padding: 0
   clear: both
-  font-family: 'Light-Weight'
+  font-weight: 300
 
 body
   font-size: 0.9rem
   line-height: 1.6
-  font-family: 'Standard-Weight'
+  font-family: 'Open Sans', sans-serif
 
 .bold
   font-weight: bold !important
