--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -14,8 +14,7 @@
   cursor: pointer
   background-color: $color-blue-3
   white-space: nowrap
-  font-weight: normal
-  font-family: 'Standard-Weight'
+  font-weight: 400
   -webkit-appearance: none
 
   &:hover
