increased font-weight of assignment types and reduced font-weight of ui tab content

--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -24,6 +24,7 @@ form .tabs-content .content
 
 .ui-tabs
   padding: 0 !important
+  font-weight: 300
 
 .ui-widget
   font-family: 'Open Sans', sans-serif
