--- a/app/assets/stylesheets/_typography.sass
+++ b/app/assets/stylesheets/_typography.sass
@@ -115,6 +115,9 @@ h4.assignment_name
 
 .assignment-type-name
   display: inline
+
+/** Instructor and student-view assignment types accordion **/
+.assignment_type h3, .assignment-type-name
   font-weight: 400
 
 h5.section-title
