--- a/app/assets/stylesheets/_features.sass
+++ b/app/assets/stylesheets/_features.sass
@@ -125,13 +125,10 @@
     .hero-section
       margin-top: 4rem
 
-      h1
-        margin-top: 0rem
-        margin-bottom: 6rem
-
     .feature-section
       height: auto !important
       display: block
+      padding: 1em
 
       .image-container
         margin: 1rem auto !important
@@ -158,8 +155,8 @@
       h1
         margin-top: 2rem
         font-size: 1.5rem !important
-        height: 50px !important
-        padding-bottom: 1rem
+        margin: 1.5rem auto
+        width: 100%
 
       .promo-text
         font-size: .8rem
