changed progress striped bar on grading scheme to match color scheme

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -47,7 +47,7 @@ p.predictor-description
   height: .75rem
   margin-left: 0.5rem
   border-radius: 25px
-  background-image: repeating-linear-gradient(45deg, $color-yellow-1, $color-yellow-1 35px, $color-blue-3 35px, $color-blue-3 70px)
+  background-image: repeating-linear-gradient(45deg, $color-green-2, $color-green-2 35px, $color-blue-2 35px, $color-blue-2 70px)
 
 #levels_per_assignment
   min-height: 200px
