--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -32,6 +32,8 @@ a.site-title
     list-style-type: none
     margin: 0
     padding: 0
+  a
+    display: block
 
 .layout-right-flyout
   right: 0
