--- a/app/views/assignments/individual/_table_head.html.haml
+++ b/app/views/assignments/individual/_table_head.html.haml
@@ -4,6 +4,8 @@
   %th{scope: "col"} First Name
   %th{scope: "col"} Last Name
 
+  - if presenter.assignment.threshold_points?
+    %th Raw Score
   // If 'Score' only if the assignment type is not student_weightable
   - if !presenter.assignment_type.student_weightable? && !presenter.assignment.pass_fail?
     %th{scope: "col", "data-dynatable-sorts" => "numericScore"} Score
